test/scc/ext/tm/semantic-errors/015.t
void test() _Transaction_safe
{
    volatile int a[10];
    a[0];
}